--- a/css/menu.css
+++ b/css/menu.css
@@ -24,7 +24,7 @@
   width: 60px;
   height: 60px;
   padding: 1rem;
-  background: var(--primary-color);
+  background: var(--menu-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,7 +36,7 @@
   flex: none;
   width: 100%;
   height: 2px;
-  background: #fff;
+  background: var(--hamburger-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -46,7 +46,7 @@
 /* Hamburger Lines - Top & Bottom */
 .menu-wrap .hamburger > div::before,
 .menu-wrap .hamburger > div::after {
-  content: '';
+  content: "";
   position: absolute;
   z-index: 1;
   top: -10px;
@@ -89,7 +89,7 @@
 
 .menu-wrap .toggler:checked ~ .menu > div > div {
   opacity: 1;
-  transition:  opacity 0.4s ease 0.4s;
+  transition: opacity 0.4s ease 0.4s;
 }
 
 .menu-wrap .menu {
@@ -126,9 +126,13 @@
   transition: opacity 0.4s ease;
 }
 
+.menu-wrap .menu > div > div > ul {
+  padding-inline-start: 0px;
+}
+
 .menu-wrap .menu > div > div > ul > li {
   list-style: none;
-  color: #fff;
+  color: var(--light-font-color);
   font-size: 1.5rem;
   padding: 1rem;
 }
@@ -140,5 +144,20 @@
 }
 
 .menu-wrap .menu > div > div > ul > li > a:hover {
-  color: var(--secondary-color);
+  color: var(--secondary-light-color);
+}
+
+.btn {
+  display: inline-block;
+  border: none;
+  background: var(--primary-color);
+  color: #fff;
+  padding: 0.75rem 1.5rem;
+  margin-top: 1rem;
+  transition: opacity 1s ease-in-out;
+  text-decoration: none;
+}
+
+.btn:hover {
+  opacity: 0.7;
 }
