--- a/css/menu.css
+++ b/css/menu.css
@@ -89,7 +89,7 @@
 
 .menu-wrap .toggler:checked ~ .menu > div > div {
   opacity: 1;
-  transition: opacity 0.4s ease 0.4s;
+  transition: all 0.4s ease 0.4s;
 }
 
 .menu-wrap .menu {
@@ -123,7 +123,7 @@
   max-width: 90vw;
   max-height: 100vh;
   opacity: 0;
-  transition: opacity 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 .menu-wrap .menu > div > div > ul {
@@ -140,24 +140,9 @@
 .menu-wrap .menu > div > div > ul > li > a {
   color: inherit;
   text-decoration: none;
-  transition: color 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 .menu-wrap .menu > div > div > ul > li > a:hover {
   color: var(--secondary-light-color);
-}
-
-.btn {
-  display: inline-block;
-  border: none;
-  background: var(--primary-color);
-  color: #fff;
-  padding: 0.75rem 1.5rem;
-  margin-top: 1rem;
-  transition: opacity 1s ease-in-out;
-  text-decoration: none;
-}
-
-.btn:hover {
-  opacity: 0.7;
 }
