--- a/css/about.css
+++ b/css/about.css
@@ -11,10 +11,23 @@
 
 .description__text{
     padding: 10px;
-    grid-column: 1 / span 8;
+    grid-column: 2 / span 8;
 }
 
 .description-pic {
-    background-color: green;
-    grid-column: 9 / span 4;
+    grid-column: 10 / span 4;
+}
+
+.description__img {
+    height: 500px;
+}
+
+.ele--secondary-header{
+    display: inline;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
 }
