--- a/css/about.css
+++ b/css/about.css
@@ -4,22 +4,39 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     width: 80%;
     gap: 20px;
 }
 
 .description__text{
     padding: 10px;
-    grid-column: 2 / span 8;
+    grid-column: 2 / span 6;
 }
 
 .description-pic {
-    grid-column: 10 / span 4;
+    grid-column: 8 / span 2;
 }
 
 .description__img {
     height: 500px;
+}
+
+@media (max-width: 1100px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 1fr);
+        justify-items: center;
+    }
+
+    .description__text{
+        padding: 10px;
+        grid-column: 1 / span 1;
+    }
+    
+    .description-pic {
+        grid-column: 1 / span 1;
+    }
 }
 
 .ele--secondary-header{
