--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -55,3 +55,58 @@
 .project_item:nth-child(3n+2) {
     grid-column: 3 / span  1;
 }
+
+@media (max-width: 2301px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        width: 80%;
+        gap: 20px 10px;
+    }
+
+    .container--full-height {
+        height: 150vh;
+    }
+
+    .project__item img{
+        height: 200px;
+    }
+}
+
+@media (max-width: 1701px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 80%;
+        gap: 10px 10px;
+    }
+
+    .container--full-height {
+        height: 200vh;
+    }
+
+    .project__item img{
+        height: 150px;
+    }
+}
+
+@media (max-width: 876px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 80%;
+        gap: 10px 10px;
+    }
+
+    .container--full-height {
+        height: 200vh;
+    }
+
+    .project__item img{
+        width: 100%;
+    }
+
+    .project__item:hover {
+        width: 100%;
+    }
+}
