--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -24,7 +24,7 @@
 
 .project__item img{
     height: 250px;
-    width: 650px;
+    width: 100%;
     padding: 0;
     transition: all var(--btn-animation-speed) ease-in-out;
 }
@@ -32,7 +32,7 @@
 
 .project__item:hover {
     background-color: var(--dark-btn-color);
-    width: 650px;
+    max-width: 100%;
 }
 
 .project__item:hover img{
